[gd_scene load_steps=2 format=3 uid="uid://cnfmfohofyu6s"]

[ext_resource type="Script" path="res://weapon_select.gd" id="1_magtd"]

[node name="WeaponSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_magtd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -167.5
offset_top = -58.0
offset_right = 167.5
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2

[node name="W1" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "W1
"

[node name="W2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "W2"

[node name="W3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "W3
"

[connection signal="pressed" from="VBoxContainer/W1" to="." method="_on_w_1_pressed"]
[connection signal="pressed" from="VBoxContainer/W2" to="." method="_on_w_2_pressed"]
[connection signal="pressed" from="VBoxContainer/W3" to="." method="_on_w_3_pressed"]
